# fastapp

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.md  setup.py
app/: __main__.py  requirements.txt
app/api/: website.py
fastapp/: logging.conf  main.py  requirements.txt
fastapp/routers/: auth.py  static.py
fastapp/static/: static_routes.py
fastapp/tests/: test_auth_routes.py  test_imports.py
src/: logging.conf  website.py
terraform/aws/: cloudwatch.tf  ecs_roles.tf  ecs_service.tf  envs.tf  fargate_ecs.tf  provider.tf  vars.tf
terraform/aws/containers/: demo-task.json
tf_templates/: cloudwatch.tf  ecr.tf  envs.tf  fargate_ecs.tf  outline.txt  provider.tf  roles.tf  securitygroup.tf  vars.tf  vpc.tf  vpc_nat.tf
tf_templates/aws/: ecr.tf  ecs_service.tf  fargate_ecs.tf  outline.txt  vars.tf
tf_templates/aws/iam/: ecs_task_role.json
