[project]
name = "fastapp"
version = "0.1.0"
description = "Demo of fastapi"
authors = [
    {name = "Aaron Robinett", email="instantpun@gmail.com"},
    {email = "instantpun@gmail.com"}
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"

keywords = ["packaging", "dependency", "fastapi", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements: This is done differently by poetry!
dependencies = [
    "fastapi>=0.42.0",
    "requests>=2.22.0",
    "asyncio",
    "starlette_prometheus",
    "python-json-logger",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "uvicorn>=0.11.7"
]

[project.optional-dependencies]
test = [
    "uvicorn>=0.11.7",
    "hypercorn",
    "python-dotenv>=0.10.3",
    "pytest>=5.2.1",
    "pytest-cov>=2.8.1",
    "black>=19.3b0",
    "flake8"
]

# [project.urls]
# homepage = ""
# documentation = ""
# repository = ""

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
pythonpath = "fastapp"
testpaths = ["fastapp/tests"]